# screen-annotator

./: .gitignore  CMakeLists.txt  README.md  main.cpp  screen_annotator.cpp  screen_annotator.h
Desktop/: screen-annotator.desktop
config/: config.cpp  config.h
core/: annotation_overlay.cpp  annotation_overlay.h  floating_toolbar.cpp  floating_toolbar.h  history_manager.cpp  history_manager.h
models/: annotation.cpp  annotation.h
tools/: arrow_tool.cpp  arrow_tool.h  base_tool.cpp  base_tool.h  ellipse_tool.cpp  ellipse_tool.h  eraser_tool.cpp  eraser_tool.h  line_tool.cpp  line_tool.h  pen_tool.cpp  pen_tool.h  rectangle_tool.cpp  rectangle_tool.h  tool_factory.cpp  tool_factory.h
